# bc-segmentation

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  main.cpp  result-ref  timer.h
include/: voxel_set.h  vtk_writer.h
runs/one-sphere/: run.py
src/: Makefile  README  fast_clustering.cpp  fast_clustering.h  graph.cpp  graph.h  main.cpp  segment.cpp  split.cpp  string_tools.h  voxel_set.cpp  voxel_set.h  vtk_writer.cpp  vtk_writer.h  watershed.cpp  watershed.h
src/test/: CMakeLists.txt  test_graph.cpp
